--- a/location2coord.html
+++ b/location2coord.html
@@ -39,13 +39,12 @@
             for (i = 0; i < yyy.length; i++) {
                 position = yyy[i];
                 getad(position);
-                // console.log(aaa)
-                // console.log(coord);                
+                // console.log(aaa);
+                // console.log(coord);
                 var lng = coord.location.lon;
                 var lat = coord.location.lat;
                 coord0[i]=[lng,lat];
                 // Utext2 = Utext2 + lng + ' ' + lat +"\n"
-
                 // console.log(lng, lat)
 
                 // L.marker([lat, lng])
