--- a/auto contours/auto contours.html
+++ b/auto contours/auto contours.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="自动 轴刻度 颜色比例尺 auto level contour breaks colorlegend">
     <title>auto level</title>
     <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script> -->
-    <script src="auto contours/abcl.js"></script>
+    <script src="abcl.js"></script>
     <style>
         i {
             /* position: relative; */
