--- a/webgis contour map origin.html
+++ b/webgis contour map origin.html
@@ -58,6 +58,7 @@
     <div><canvas id="mycanvas" style="display: none;"></canvas></div>
     <div id="map" class="map"></div>
     <button onclick="exportShp(map)" style="position: fixed; left:5px; bottom:60px;">导出</button>
+    <button onclick="exportTiff()" style="position: fixed; left:65px; bottom:60px;">Tiff</button>
     <!-- <input type="file" id="selectdatafile2" accept=".csv,.xls,.xlsx" style="position: fixed; left:5px; bottom:100px;" /> -->
     <img src="contourmap/icon2/1-earthnet.png" width="40px" onclick="changemap()"
         style="position: fixed; left:5px; bottom:10px;">
@@ -145,6 +146,8 @@
     <script src="contourmap/Contourmap.js"></script>
     <script src="contourmap/CreateCoordMap.js"></script>
     <script src="contourmap/CreatePopupMap.js"></script>
+    <script src="contourmap/canvastotiff.min.js"></script>
+    <script src="https://unpkg.com/leaflet-image@latest/leaflet-image.js"></script>
 
     <script>
         //----------------------------------------------------------------------------------------------主程序
@@ -201,7 +204,20 @@
             msg("导入json文件" + filename);
         }
 
-
+        function exportTiff() {
+            console.log(map)
+            // leafletImage(map, function (err, canvas) {
+            //     // now you have canvas
+            //     // example thing to do with that canvas:
+            //     var img = document.createElement('img');
+            //     var dimensions = map.getSize();
+            //     img.width = dimensions.x;
+            //     img.height = dimensions.y;
+            //     img.src = canvas.toDataURL();
+            //     document.getElementById('images').innerHTML = '';
+            //     document.getElementById('images').appendChild(img);
+            // });
+        }
         //--------------------------------------------------------------------------------Map绘制
         //-------------------绘制点位图----------------------------- 
         function draw_CircleMarker() {
