--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         <a href="GSTA.html" class="b" style="top: 15%; left: 70%;">粒径趋势分析</a>
         <a href="auto contours\linerinterp-waterQ.html" class="b" style="top: 25%; left: 70%;">水质量化等级可视化</a>
         <a href="windrose.html" class="b" style="top: 35%; left: 70%;">风浪玫瑰图</a>
-        <a href="GPSlocation.html" class="b" style="top: 45%; left: 70%;">定位</a>
+        <a href="GPSlocation.html" class="b" style="top: 45%; left: 70%;">GPS定位</a>
+        <a href="tile/canvasMap.html" class="b" style="top: 55%; left: 70%;">影像下载</a>
     </div>
 </body>
 
