Update webgis contour map origin.html

--- a/webgis contour map origin.html
+++ b/webgis contour map origin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <!-- <script>
     //通过window.screen.width获取屏幕的宽度
     console.log("当前设备分辨率" + window.screen.width + 'px', window.screen.height + 'px');
