--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- <video autoplay loop muted><source src="res/A.mp4" type="video/mp4"/></video> -->
     <h1 style="text-align: center; background-color: rgb(53, 108, 211);">Website of JET</h1>
     <div>
-        <a href="Gaussian projection coordinate conversion.html" style="top: 5%; left: 30%;">高斯投影正反算坐标转换</a>
+        <a href="https://jet-nmemc.github.io/Gaussian-projection-coordinate-transformation/" style="top: 5%; left: 30%;">高斯投影正反算坐标转换</a>
         <a href="coord_transform.html" style="top: 15%; left: 30%;">大地坐标度分秒转换</a>
         <a href="auto contours/auto contours.html" style="top: 25%; left: 30%;">自动刻度颜色图例</a>
         <a href="webgis contour map origin.html" style="top: 35%; left: 30%;">等值线图在线渲染系统</a>
