--- a/test/flow.html
+++ b/test/flow.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta charset="UTF-8">
@@ -9,28 +9,42 @@
 </head>
 
 <body>
+    <input type="number" name="" id="">
+
     <script>
 
-        console.log(getspeed())
+        console.log("航迹速度", getspeed())
         function getspeed() {
-            var Vt, Dt //船
+            var Vt, Dt //船首
             var Vf, Df //水流
             var Vc, Dc //航迹
 
-            Vt = 1.00, Dt = null;//船
-            Vf = 1.00, Df = 90.0;//水流
-            Vc = null, Dc = 45.0;//航迹
+            Vt = 10.00, Dt = null;//船首
+            Vf = 5.00, Df = 0;//水流
+            Vc = null, Dc = 90;//航迹
 
             var A = angle_btw_2_Dir(Df, Dc).rad;
             console.log("水流与航迹夹角", angle_btw_2_Dir(Df, Dc).angle);
+            // console.log("水流与航迹夹角", A);
+            if (A == 0) {
+                return Vt + Vf
+            } else {
+                sinA = Math.sin(A);
+                cosA = Math.cos(A);
+                sinB = (Vf * sinA) / Vt;
+                cosB = Math.sqrt(1 - sinB * sinB);
+                sinC = sinA * cosB + cosA * sinB;
+                Vc = Vt * sinC / sinA;
+                return Vc
+            }
+        }
 
-            sinA = Math.sin(A);
-            cosA = Math.cos(A);
-            sinB = (Vf * sinA) / Vt;
-            cosB = Math.sqrt(1 - sinB * sinB);
-            sinC = sinA * cosB + cosA * sinB;
-            Vc = Vt * sinC / sinA;
-            return Vc
+        function getcurrent(lng, lat, time) {
+            // var lng = 123, lat = 39, time = "2022-05-12 12:00"
+            return {
+                speed: 5 * Math.random(),
+                direction: 360 * Math.random()
+            }
         }
 
         function angle_btw_2_Dir(a, b) {
