--- a/webgis contour map origin.html
+++ b/webgis contour map origin.html
@@ -29,21 +29,20 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="contourmap/index.css" />
 
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
     <!-- <script src="https://cdn.bootcss.com/xlsx/0.12.6/xlsx.full.min.js"></script> -->
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"/>
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"></script>
+
     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
 
     <script src="contourmap/leaflet.latlng-graticule.js"></script>
 
     <link rel="stylesheet" href="contourmap/leaflet-geoman2.css" />
     <script src="contourmap/leaflet-geoman.min2.js"></script>
-    <!-- <link rel="stylesheet" href="contourmap/leaflet-measure.css"> -->
-    <!-- <script src="contourmap/leaflet-measure.js"></script> -->
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="contourmap/L.Control.Locate.min.css" />
     <script src="contourmap/L.Control.Locate.min.js"></script>
 
@@ -144,7 +143,7 @@
     <script src="contourmap/CreateCoordMap.js"></script>
     <script src="contourmap/CreatePopupMap.js"></script>
 
-    <script src="https://unpkg.com/leaflet-image@latest/leaflet-image.js"></script>
+    <!-- <script src="https://unpkg.com/leaflet-image@latest/leaflet-image.js"></script> -->
 
     <script>
         //----------------------------------------------------------------------------------------------主程序
